--- a/.github/workflows/indentity.yaml
+++ b/.github/workflows/indentity.yaml
@@ -10,6 +10,8 @@
         contents: read
         id-token: write
       steps:
+        - name: 'Checkout'
+          uses: 'actions/checkout@v2'
         - id: 'auth'
           name: 'Authenticate to Google Cloud'
           uses: 'google-github-actions/auth@v0.4.0'
